# instagram_hashtag_analysis

./: .gitignore  1. csv_mega_factory.ipynb  1. make_df_for_word2vec.ipynb  1.csv_factory.ipynb  1.csv_mega_factory_without_too_frequent_words.ipynb  1.make-csv-of-frequency-nouns-and-adjs.ipynb  2. KoNLPy frequency check with Mecab Tokenizer - Joeun Park Tutorial.ipynb  2. jupyter-adj-analysis-발레.ipynb  2. jupyter_noun_analysis_타바타.ipynb  2.adj-analysis-발레.ipynb  3.Exercise_Emoji_Analysis.ipynb  3.WORD2VEC_to_find_most_related_exercise.ipynb  4.TF-IDF Two Documents.ipynb  5.Srch_engine_KoNLPy_TF-IDF_Okt_Tokenizer_ver_2.ipynb  LICENSE  README.md  instagram_get_hashtags.py  pyproject.toml  requirements.txt
