[tool.poetry]
name = "instagram_hashtag_analysis"
version = "0.1.0"
description = ""
authors = ["noopy <young_ahn@yonsei.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
